# Roman_numeral_calculator

./: README.txt  README.txt~  configure.ac
src/: Int_to_Roman.c  Makefile.am  Roman_to_Int.c  conversion.c  conversion.h  main.c  roman_numeral_calculator.c
tests/: Makefile.am  check_int_to_roman.c  check_roman.h  check_roman_addition.c  check_roman_calc.c  check_roman_subtraction.c  check_roman_to_int.c
